--- a/Leaflet-Step-2/static/css/style.css
+++ b/Leaflet-Step-2/static/css/style.css
@@ -8,3 +8,22 @@ body,
 html {
   height: 100%;
 }
+
+.info {
+  padding: 1px 11px;
+  background: #F3EFE4;
+  border-radius: 4px;
+}
+
+.legend {
+  line-height: 29px;
+  color: #30302E;
+}
+
+.legend i {
+  width: 19px;
+  height: 19px;
+  float: right;
+  margin-right: 11px;
+  opacity: 0.74;
+}
